--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -65,9 +65,11 @@
             <div class="post-tags">
                 <i class="fas fa-tags fa-fw"></i>&nbsp;
                 {{- range $index, $value := . -}}
+                    {{- if ne "" $value -}}
                     {{- if gt $index 0 }},&nbsp;{{ end -}}
                     {{- $tag := partialCached "function/path.html" $value $value | printf "/tags/%v" | $.Site.GetPage -}}
                     <a href="{{ $tag.RelPermalink }}">{{ $tag.Title }}</a>
+                    {{- end -}}
                 {{- end -}}
             </div>
         {{- end -}}
