--- a/layouts/partials/single/footer.html
+++ b/layouts/partials/single/footer.html
@@ -50,9 +50,11 @@
             {{- with .Params.tags -}}
                 <i class="fas fa-tags fa-fw"></i>&nbsp;
                 {{- range $index, $value := . -}}
+                    {{- if ne "" $value -}}
                     {{- if gt $index 0 }},&nbsp;{{ end -}}
                     {{- $tag := partialCached "function/path.html" $value $value | printf "/tags/%v" | $.Site.GetPage -}}
                     <a href="{{ $tag.RelPermalink }}">{{ $tag.Title }}</a>
+                    {{- end -}}
                 {{- end -}}
             {{- end -}}
         </section>
